--- a/workspace/images.qrc
+++ b/workspace/images.qrc
@@ -1,5 +1,9 @@
 <RCC>
     <qresource prefix="/images">
         <file>Elegant_Background-3_grey.jpg</file>
+        <file>aa.jpg</file>
+        <file>handpainted.jpg</file>
+        <file>wlp.jpg</file>
+        <file>middleEarth.jpg</file>
     </qresource>
 </RCC>
