--- a/IHM_DataBaseTools/editallergiewindow.ui
+++ b/IHM_DataBaseTools/editallergiewindow.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>EditAllergieWindow</class>
  <widget class="QDialog" name="EditAllergieWindow">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -10,10 +13,22 @@
     <height>260</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>Dialog</string>
+  <property name="minimumSize">
+   <size>
+    <width>590</width>
+    <height>260</height>
+   </size>
   </property>
-  <widget class="QWidget" name="">
+  <property name="maximumSize">
+   <size>
+    <width>590</width>
+    <height>260</height>
+   </size>
+  </property>
+  <property name="windowTitle">
+   <string>Edition des allergies</string>
+  </property>
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -51,12 +66,9 @@
        </widget>
       </item>
       <item>
-       <widget class="QListWidget" name="listAllDataBase">
-        <property name="maximumSize">
-         <size>
-          <width>250</width>
-          <height>500</height>
-         </size>
+       <widget class="listWidgetDrag" name="listAllDataBase">
+        <property name="alternatingRowColors">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -88,12 +100,15 @@
        </widget>
       </item>
       <item>
-       <widget class="QListWidget" name="listAllProd">
+       <widget class="ListwidgetDeletable" name="listAllProd">
         <property name="maximumSize">
          <size>
           <width>250</width>
           <height>500</height>
          </size>
+        </property>
+        <property name="alternatingRowColors">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -102,6 +117,18 @@
    </layout>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ListwidgetDeletable</class>
+   <extends>QListWidget</extends>
+   <header location="global">listwidgetdeletable.h</header>
+  </customwidget>
+  <customwidget>
+   <class>listWidgetDrag</class>
+   <extends>QListWidget</extends>
+   <header location="global">listwidgetdrag.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
