--- a/IHM_DataBaseTools/editingredientwindow.ui
+++ b/IHM_DataBaseTools/editingredientwindow.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>EditIngredientWindow</class>
  <widget class="QDialog" name="EditIngredientWindow">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -10,8 +13,20 @@
     <height>260</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>590</width>
+    <height>260</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>590</width>
+    <height>260</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Edition des Ingrédients</string>
   </property>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
@@ -51,7 +66,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QListWidget" name="listIngrDataBase">
+       <widget class="listWidgetDrag" name="listIngrDataBase">
         <property name="maximumSize">
          <size>
           <width>250</width>
@@ -88,7 +103,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QListWidget" name="listIngrProduct">
+       <widget class="ListwidgetDeletable" name="listIngrProduct">
         <property name="maximumSize">
          <size>
           <width>250</width>
@@ -102,6 +117,18 @@
    </layout>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ListwidgetDeletable</class>
+   <extends>QListWidget</extends>
+   <header location="global">listwidgetdeletable.h</header>
+  </customwidget>
+  <customwidget>
+   <class>listWidgetDrag</class>
+   <extends>QListWidget</extends>
+   <header location="global">listwidgetdrag.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
