--- a/IHM_DataBaseTools/ingredientdatabasewindow.ui
+++ b/IHM_DataBaseTools/ingredientdatabasewindow.ui
@@ -10,8 +10,20 @@
     <height>260</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>440</width>
+    <height>260</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>440</width>
+    <height>260</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Géstion des Ingrédients</string>
   </property>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
@@ -109,7 +121,7 @@
        </widget>
       </item>
       <item>
-       <widget class="ListWidget" name="listIngredDataBase">
+       <widget class="ListwidgetDeletable" name="listIngredDataBase">
         <property name="maximumSize">
          <size>
           <width>250</width>
@@ -125,9 +137,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ListWidget</class>
+   <class>ListwidgetDeletable</class>
    <extends>QListWidget</extends>
-   <header location="global">listwidget.h</header>
+   <header location="global">listwidgetdeletable.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
