ajout d'une image pour la fenêtre de confirmation

--- a/workspace/confirmdialog.ui
+++ b/workspace/confirmdialog.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>714</width>
+    <height>421</height>
    </rect>
   </property>
   <property name="cursor">
@@ -22,12 +22,25 @@
   <property name="modal">
    <bool>true</bool>
   </property>
+  <widget class="QLabel" name="lblImg">
+   <property name="geometry">
+    <rect>
+     <x>16</x>
+     <y>16</y>
+     <width>681</width>
+     <height>351</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>250</y>
-     <width>381</width>
+     <x>20</x>
+     <y>380</y>
+     <width>681</width>
      <height>29</height>
     </rect>
    </property>
